# problems

./: .gitignore  README.md  __init__.py  pyproject.toml
.generator/: generator.py  main.py
.github/workflows/: ci.yml  format.yml
.template/: .cs50.yml
.template/checks/: main.py  (+1 more)
_html_templates/: before_you_begin.html  before_you_begin_start.html  command_box_with_cp.html  demo.html  file.html  footer.html  header.html  how_to_mark_in_moodle.html  how_to_submit.html  how_to_test_head.html
binary/: .cs50.yml
bogo/: .cs50.yml
bubble/: .cs50.yml
cs50_subscription/: .cs50.yml
divide-integers/: .cs50.yml
einsen/: .cs50.yml
einstein/: .cs50.yml
emojize/: .cs50.yml
extensions/: .cs50.yml  extensions.cast  extensions.html
faces/: .cs50.yml
hello/: .cs50.yml  hello.cast  hello.html
html_templates/: details.html  file.html  how_to_mark_in_moodle.html  how_to_test_auto.html
iban/: .cs50.yml
insert/: .cs50.yml
interpreter/: .cs50.yml
intervals/: .cs50.yml
linear/: .cs50.yml
linkedAfter/: .cs50.yml
linkedFind/: .cs50.yml
linkedInsert/: .cs50.yml
linkedMerge/: .cs50.yml
linkedRemove/: .cs50.yml
linkedStack/: .cs50.yml
luhn/: .cs50.yml
merge/: .cs50.yml
nadel/: .cs50.yml
neuner/: .cs50.yml
palindrom/: .cs50.yml
playback/: .cs50.yml
rotate/: .cs50.yml
run_back/: .cs50.yml
sinuswave/: .cs50.yml
str-index/: .cs50.yml
strings/: .cs50.yml
stufen/: .cs50.yml
sudoku1/: .cs50.yml
tip/: .cs50.yml  tip.cast  tip.html
willkommen/: .cs50.yml  __init__.py  willkommen.html
zahlenjagd/: .cs50.yml
zeilen/: .cs50.yml
(+205 files in other folders)
